--- a/loja/pom.xml
+++ b/loja/pom.xml
@@ -13,6 +13,13 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>1.4.14</version>
+		</dependency>
 	</dependencies>
-	
+
+
 </project>
