Gerando o artefado de build

--- a/loja/pom.xml
+++ b/loja/pom.xml
@@ -29,6 +29,7 @@
 	</repositories>
 
 	<build>
+	  <finalName>loja</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
